Adicionando os arquivos pela primeira vez ao repositório

--- a/public_html/Exemplo-div1.html
+++ b/public_html/Exemplo-div1.html
@@ -8,6 +8,7 @@
         <div id="container">
         <div id="div1">Minha Primeira DIV</div>
         <div id="div2">Minha Segunda DIV</div>
+        <div id="div3">Minha Terceira DIV</div>
         </div>
     </body>
 </html>
